print song name via uart

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,4 +11,5 @@
 [env:megaatmega2560]
 platform = atmelavr
 board = megaatmega2560
-framework = arduino
+monitor_speed = 57600
+build_flags = -Wall
