list all files on sd card

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,4 @@ platform = atmelavr
 board = megaatmega2560
 monitor_speed = 57600
 build_flags = -Wall -Wno-write-strings
+;monitor_filters = debug
